--- a/architecture.mdx
+++ b/architecture.mdx
@@ -18,7 +18,9 @@ Chalk’s online query serving platform is architected to
 
 In short, Chalk was built to get the right data from the right place at the right time.
 
-## Onlnine serving architecture
+---
+
+## Online serving architecture
 
 Let's examine how the pieces work together to compute and serve **[features](/docs/features)**.
 
