--- a/architecture.mdx
+++ b/architecture.mdx
@@ -48,7 +48,7 @@ Chalk uses many techniques to reduce latency, such as:
 
 ### Data orchestration
 
-Chalk eliminates the complexity of orchestrating data and ETL pipelines by building a dependency graph (DAG) of your features — which are defined using Python.
+Chalk eliminates the complexity of orchestrating data and ETL pipelines by building a dependency graph (DAG) of your features, which are defined using Python.
 At inference time, Chalk dynamically--without manual configuration--builds query plans (sub-graphs of your feature DAG) based on the features you request.
 
 Write feature definitions in Python and Chalk automatically
