--- a/architecture.mdx
+++ b/architecture.mdx
@@ -51,7 +51,7 @@ Chalk uses many techniques to reduce latency, such as:
 Chalk eliminates the complexity of orchestrating data and ETL pipelines by building a dependency graph (DAG) of your features, which are defined using Python.
 At inference time, Chalk dynamically builds query plans (subgraphs of your feature DAG) without manual configuration, based on the features you request.
 
-Write feature definitions in Python and Chalk automatically
+Write feature definitions in Python, and Chalk automatically
 
 - Determines optimal computation and query planning strategies
 - Handles caching, incremental updates, and backfills
