fix: Adding hyperlinks to other pages

--- a/architecture.mdx
+++ b/architecture.mdx
@@ -54,8 +54,8 @@ At inference time, Chalk dynamically builds query plans (subgraphs of your featu
 Write feature definitions in Python, and Chalk automatically
 
 - Determines optimal computation and query planning strategies
-- Handles caching, incremental updates, and backfills
-- Provides built-in observability and data lineage without additional tooling
+- Handles [caching](/docs/feature-caching), [incremental updates](/docs/sql#incremental-queries), and [backfills](/docs/backfilling-data)
+- Provides built-in [observability](/docs/observability) and data lineage without additional tooling
 
 As a result, Chalk can serve as a **drop-in replacement for orchestration tools like Dagster, Airflow, and Prefect** while simultaneously providing purpose-built features for production ML workloads.
 
