--- a/has-many.mdx
+++ b/has-many.mdx
@@ -126,6 +126,8 @@ User.transfers[
 ].sum()
 ```
 
+To compute an aggregation over one or more time windows, see our docs on [windowed aggregations](/docs/aggregations).
+
 ---
 
 ## Back-references
