--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -221,9 +221,9 @@ class User:
 
 |  Feature Definition Window | Python Syntax                   | Fully Qualified Name            |
 | ---------------------------|---------------------------------|---------------------------------|
-| "10m"                      | User.num_failed_logins["10m"]   | User.num_failed_logins__600__   |
-| "1h30m"                    | User.num_failed_logins["1h30m"] | User.num_failed_logins__5400__  |
-| "1d"                       | User.num_failed_logins["1d"]    | User.num_failed_logins__86400__ |
+| "10m"                      | User.num_failed_logins["10m"]   | `User.num_failed_logins__600__`   |
+| "1h30m"                    | User.num_failed_logins["1h30m"] | `User.num_failed_logins__5400__`  |
+| "1d"                       | User.num_failed_logins["1d"]    | `User.num_failed_logins__86400__` |
 
 
 Windowed features can be inputs to resolvers:
