--- a/kube-resources-drilldown.mdx
+++ b/kube-resources-drilldown.mdx
@@ -165,7 +165,7 @@ In production environments, we recommend the following scaling choices:
   - use >= 1 replica, with a low cpu request (i.e. 1-2)
   - set a cpu target of 80%
 
-## Scaling under workload
+## Performance Under Load
 
 ### CPU Scaling
 
