--- a/observability.mdx
+++ b/observability.mdx
@@ -34,3 +34,5 @@ Resolvers support many workflows and common orchestration patterns:
   Integrate PagerDuty alerts into you feature pipelines.
 - **[Slack](/docs/slack)** -
   Consume Chalk alerts in your Slack channels.
+- **[IncidentIo](/docs/incidentio)** -
+  Integrate Chalk alerts with your IncidentIo workflow
